<resources>
    <string name="app_name">Telegram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Имя поьзователя</string>
    <string name="account">Aккаунт</string>
    <string name="click_for_change_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="default_bio">О себе</string>
    <string name="settings_lebel_bio">Напишите немного о себе</string>
    <string name="settings_change_menu">изменить имя</string>
    <string name="exit">Выход</string>
</resources>